NP-45324-ignore-unresolvable-dois, implemented